# Learning_DirectX

./: README.txt  
2D FrameWork/src/DX/DXEngine/: DXEngine.cpp
2D FrameWork/src/DX/DXLight/: DXLight.cpp
2D FrameWork/src/DX/DXShader/: DXShader.cpp  DXShader.h
2D FrameWork/src/System/: System.cpp
3D FrameWork/: CMakeLists.txt
3D FrameWork/src/DX/DXModel/: DXModel.cpp
3D FrameWork/src/Log/: Log.cpp
BraynzarSoft/DX11_Lesson_05_Color!_zip/d3d11color/: d3d11color.sln
BraynzarSoft/DX11_Lesson_05_Color!_zip/d3d11color/d3d11color/: main.cpp
BraynzarSoft/DX11_Lesson_07_Depth_zip/Depth/: Depth.sln
BraynzarSoft/DX11_Lesson_07_Depth_zip/Depth/Depth/: Depth.vcxproj.filters  main.cpp
BraynzarSoft/DX11_Lesson_08_World_View_Projection_Spaces_zip/WVP/WVP/: WVP.vcxproj  main.cpp
BraynzarSoft/DX11_Lesson_09_Transformations_zip/d3d11Transformations/: d3d11Transformations.sln
BraynzarSoft/DX11_Lesson_09_Transformations_zip/d3d11Transformations/d3d11Transformations/: d3d11Transformations.vcxproj
BraynzarSoft/DX11_Lesson_11_Textures_zip/d3d11Textures/: d3d11Textures.sln
BraynzarSoft/DX11_Lesson_11_Textures_zip/d3d11Textures/d3d11Textures/: d3d11Textures.vcxproj.filters  main.cpp
BraynzarSoft/DX11_Lesson_12_Blending_zip/d3d11Blending/d3d11Blending/: main.cpp
BraynzarSoft/DX11_Lesson_27_MD5_Animation_zip/D3D11_MD5_Animation/: D3D11_MD5_Animation.sln
BraynzarSoft/DX11_Lesson_27_MD5_Animation_zip/D3D11_MD5_Animation/D3D11_MD5_Animation/: D3D11_MD5_Animation.vcxproj  main.cpp
Exercise/04.Indices/src/DXENGINE/: DXEngine.cpp  DXEngine.h
FrameWork/: CMakeLists.txt  Dependency.cmake  README.txt
FrameWork - 2D/: CMakeLists.txt  README.txt
FrameWork - 2D/shader/: PixelShader.hlsl
FrameWork - 2D/src/: main.cpp
FrameWork - 2D/src/DX/: DXCommon.h
FrameWork - 2D/src/DX/DXCamera/: DXCamera.cpp  DXCamera.h
FrameWork - 2D/src/DX/DXD3D/: DXD3D.cpp  DXD3D.h
FrameWork - 2D/src/DX/DXEngine/: DXEngine.cpp  DXEngine.h
FrameWork - 2D/src/DX/DXLight/: DXLight.cpp
FrameWork - 2D/src/DX/DXModel/: DXM_Common.h  DXModel.cpp  DXModel.h
FrameWork - 2D/src/DX/DXPhysics/: DXPhysics.cpp  DXPhysics.h
FrameWork - 2D/src/DX/DXText/: DXText.cpp  DXText.h
FrameWork - 2D/src/DX/DXTexture/: DXTexture.h
FrameWork - 2D/src/SUB/SUBInput/: SUBInput.cpp  SUBInput.h
FrameWork - 2D/src/SUB/SUBTimer/: SUBTimer.cpp  SUBTimer.h
FrameWork - 2D/src/System/: System.cpp  System.h
FrameWork - 3D/: CMakeLists.txt  README.txt
FrameWork - 3D/src/DX/DXCamera/: DXCamera.cpp  DXCamera.h
FrameWork - 3D/src/DX/DXEngine/: DXEngine.cpp  DXEngine.h
FrameWork - 3D/src/DX/DXLight/: DXLight.h
FrameWork - 3D/src/DX/DXModel/: DXModel.cpp  DXModel.h
FrameWork - 3D/src/DX/DXShader/: DXShader.cpp  DXShader.h
FrameWork - 3D/src/DX/DXTexture/: DXTexture.cpp
FrameWork - 3D/src/KMInput/: KMInput.h
FrameWork - 3D/src/SUB/: SUBCommon.h
FrameWork - 3D/src/SUB/SUBCPU/: SUBCPU.h
FrameWork - 3D/src/SUB/SUBFPS/: SUBFPS.h
FrameWork - 3D/src/SUB/SUBInput/: SUBInput.h
FrameWork - 3D/src/SUB/SUBLog/: SUBLog.h
FrameWork - 3D/src/System/: System.cpp  System.h
FrameWork/shader/: PixelShader.hlsl
FrameWork/src/DX/: DXCommon.h
FrameWork/src/DX/DXCamera/: DXCamera.cpp
FrameWork/src/DX/DXD3D/: DXD3D.cpp  DXD3D.h
FrameWork/src/DX/DXEngine/: DXEngine.cpp  DXEngine.h
FrameWork/src/DX/DXLight/: DXLight.h
FrameWork/src/DX/DXLight/DXL_Shader/: DXL_Shader.cpp  DXL_Shader.h
FrameWork/src/DX/DXLight/DXL_Shader/Shader/: VertexShader.hlsl
FrameWork/src/DX/DXModel/: DXModel.cpp  DXModel.h
FrameWork/src/DX/DXModel/DXM_Manager/: DXM_Manager.cpp  DXM_Manager.h
FrameWork/src/DX/DXShader/: DXShader.cpp
FrameWork/src/DX/DXText/: DXText.cpp  DXText.h
FrameWork/src/DX/DXText/DXT_Font/: DXT_Font.cpp
FrameWork/src/DX/DXText/DXT_Shader/: DXT_Shader.cpp
FrameWork/src/DX/DXTexture/: DXTexture.h
FrameWork/src/KMInput/: KMInput.cpp
FrameWork/src/SUB/SUBCPU/: SUBCPU.cpp  SUBCPU.h
FrameWork/src/SUB/SUBFPS/: SUBFPS.cpp  SUBFPS.h
FrameWork/src/SUB/SUBInput/: SUBInput.cpp
FrameWork/src/SUB/SUBLog/: SUBLog.cpp
FrameWork/src/SUB/SUBTimer/: SUBTimer.cpp
FrameWork/src/System/: System.cpp  System.h
NewMake/: CMakeLists.txt  README.txt
NewMake/shader/: PixelShader.hlsl  VertexShader.hlsl
NewMake/src/: main.cpp
NewMake/src/DX/: DXCommon.h
NewMake/src/DX/DXCamera/: DXCamera.cpp
NewMake/src/DX/DXD3D/: DXD3D.cpp  DXD3D.h
NewMake/src/DX/DXENGINE/: DXEngine.cpp  DXEngine.h
NewMake/src/DX/DXLight/: DXLight.cpp  DXLight.h
NewMake/src/DX/DXModel/: DXModel.cpp  DXModel.h  MDBox.txt
NewMake/src/DX/DXModel/MDBox/: MDBox.cpp  MDBox.h
NewMake/src/DX/DXModel/MDParticle/: MDParticle.cpp  MDParticle.h
NewMake/src/DX/DXModel/MDTexture/: MDTexture.cpp  MDTexture.h
NewMake/src/DX/DXPhysics/: DXPhysics.h
NewMake/src/DX/DXShader/: DXShader.cpp  DXShader.h
NewMake/src/System/: System.cpp  System.h
NewMake_2D/shader/: VertexShader.hlsl
NewMake_2D/src/DX/DXCamera/: DXCamera.h
NewMake_3D/: CMakeLists.txt
NewMake_3D/src/DX/DXCamera/: DXCamera.cpp
NewMake_3D/src/DX/DXModel/: DXModel.h
NewMake_3D/src/System/: System.h
Tutorial/01.Creating a Window!/: CMakeLists.txt
Tutorial/01.Creating a Window!/src/: main.cpp
Tutorial/01.Creating a Window!/src/DXENGINE/: DXEngine.cpp  DXEngine.h
Tutorial/01.Creating a Window!/src/DXWindow/: DXWindow.cpp  DXWindow.h
Tutorial/02.Begin Drawing!/shader/: PixelShader.hlsl  VertexShader.hlsl
Tutorial/02.Begin Drawing!/src/DXENGINE/: DXEngine.cpp  DXEngine.h  DXVertex.h
Tutorial/03.Color!/shader/: Shader.fx
Tutorial/03.Color!/src/: main.cpp
Tutorial/03.Color!/src/DXENGINE/: DXEngine.cpp  DXEngine.h  DXVertex.h
Tutorial/04.Indices/src/Log/: Log.h
Tutorial/06.World View and Local Spaces (static Camaera)/shader/: PixelShader.hlsl  Shader.fx
Tutorial/10.Blending/shader/: Shader.hlsl  VertexShader.hlsl
Tutorial/11.Pixel Clipping/: CMakeLists.txt  Dependency.cmake
Tutorial/11.Pixel Clipping/shader/: Shader.fx
Tutorial/11.Pixel Clipping/src/DXENGINE/: DXEngine.cpp  DXEngine.h
Tutorial/11.Pixel Clipping/src/DXWindow/: DXWindow.cpp
(+56 files in other folders)
